Replace authentication method for Firebase
