# api/v1/server/auth.go
@@ -1,27 +1,23 @@
 package server
 
 import (
-	"context"
 	"crypto/rand"
 	"encoding/hex"
+	"fmt"
 	"net/http"
-	"net/url"
 
 	"github.com/JonathanGzzBen/nutrity-api/api/v1/models"
 	"github.com/gin-gonic/gin"
-	"golang.org/x/oauth2"
 )
 
 var (
-	state             = "nutrity-api"
-	googleUserInfoURL = "https://www.googleapis.com/oauth2/v3/userinfo"
-	AccessTokenName   = "AccessToken"
-	TokenLength       = 40
+	AccessTokenName = "AccessToken"
+	TokenLength     = 40
 )
 
-type IOauthConfig interface {
-	AuthCodeURL(string, ...oauth2.AuthCodeOption) string
-	Exchange(context.Context, string, ...oauth2.AuthCodeOption) (*oauth2.Token, error)
+type tokenResponse struct {
+	AccessToken string `json:"AccessToken"`
+	TokenType   string `json:"TokenType"`
 }
 
 func generateSecureToken(length int) string {
@@ -32,9 +28,47 @@ func generateSecureToken(length int) string {
 	return hex.EncodeToString(b)
 }
 
-type tokenResponse struct {
-	AccessToken string `json:"AccessToken"`
-	TokenType   string `json:"TokenType"`
+type RegisterUserDTO struct {
+	GoogleToken string `json:"GoogleToken"`
+	Username    string `json:"Username"`
+	Email       string `json:"Email"`
+}
+
+// Register is the handler for POST requests to /auth
+// 	@ID RegisterUser
+// 	@Tags auth
+// 	@Param user body RegisterUserDTO true "User"
+// 	@Success 200 {object} tokenResponse
+// 	@Failure 403 {object} models.APIError
+// 	@Router /auth [post]
+func (s *Server) RegisterUser(c *gin.Context) {
+	var ru RegisterUserDTO
+	if err := c.ShouldBindJSON(&ru); err != nil {
+		c.JSON(http.StatusBadRequest, models.APIError{Code: http.StatusNotFound, Message: "invalid register user: " + err.Error()})
+		return
+	}
+	fmt.Print("Google token: ")
+	fmt.Println(ru.GoogleToken)
+
+	u, err := s.UsersRepo.GetUserByGoogleToken(ru.GoogleToken)
+	if err != nil {
+		// If no user registered with given GoogleToken
+		generatedToken := generateSecureToken(TokenLength)
+		u = &models.User{
+			AccessToken: generatedToken,
+			GoogleToken: ru.GoogleToken,
+			Username:    ru.Username,
+			Email:       ru.Email,
+		}
+		s.UsersRepo.CreateUser(u)
+	}
+
+	tokenResponse := tokenResponse{
+		AccessToken: u.AccessToken,
+		TokenType:   "Bearer",
+	}
+
+	c.JSON(http.StatusOK, tokenResponse)
 }
 
 // CurrentUser is the handler for GET requests to /auth
@@ -46,93 +80,10 @@ type tokenResponse struct {
 // 	@Router /auth [get]
 func (s *Server) GetCurrentUser(c *gin.Context) {
 	at := c.GetHeader(AccessTokenName)
-	u, err := s.userByAccessToken(at)
+	u, err := s.UsersRepo.GetUserByAccessToken(at)
 	if err != nil {
 		c.JSON(http.StatusForbidden, models.APIError{Code: http.StatusForbidden, Message: "invalid access token"})
 		return
 	}
 	c.JSON(http.StatusOK, userDTOFromUser(u))
-}
-
-// LoginGoogle is the handler for GET requests to /auth/google-login
-// it's the entryway for Google OAuth2 flow.
-func (s *Server) LoginGoogle(c *gin.Context) {
-	url := s.googleConfig.AuthCodeURL(state, oauth2.AccessTypeOffline)
-	c.Redirect(http.StatusTemporaryRedirect, url)
-}
-
-// GoogleCallback is the handler for GET requests to /auth/google-callback
-// it's part of Google OAuth2 flow.
-//
-// Returns user's token.
-func (s *Server) GoogleCallback(c *gin.Context) {
-	if c.Request.URL.Query().Get("state") != state {
-		c.JSON(http.StatusBadRequest, &models.APIError{Code: http.StatusBadRequest, Message: "state did not match"})
-		return
-	}
-
-	authCode := c.Request.URL.Query().Get("code")
-	ctx := context.Background()
-	token, err := s.googleConfig.Exchange(ctx, authCode)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, &models.APIError{Code: http.StatusBadRequest, Message: "failed to exchange token: " + err.Error()})
-		return
-	}
-
-	uinfo, err := s.googleClient.userInfoByAccessToken(token.AccessToken)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, &models.APIError{Code: http.StatusBadRequest, Message: "failed to get user info: " + err.Error()})
-		return
-	}
-
-	u, err := s.UsersRepo.GetUserByGoogleSub(uinfo.Sub)
-	tokenResponse := tokenResponse{
-		TokenType: "Bearer",
-	}
-	if u != nil {
-		tokenResponse.AccessToken = u.AccessToken
-	}
-	if err != nil {
-		generatedToken := generateSecureToken(TokenLength)
-		u := &models.User{
-			GoogleSub:   uinfo.Sub,
-			AccessToken: generatedToken,
-			Username:    uinfo.Name,
-			Email:       uinfo.Email,
-		}
-		s.UsersRepo.CreateUser(u)
-		tokenResponse.AccessToken = generatedToken
-	}
-
-	c.JSON(http.StatusOK, tokenResponse)
-}
-
-func (s *Server) userByAccessToken(at string) (*models.User, error) {
-	u, err := s.UsersRepo.GetUserByAccessToken(at)
-	if err != nil {
-		return nil, err
-	}
-	return u, nil
-}
-
-// devOAuthAuthorize handles requests to /auth/authorize
-// should only be available during development
-func (s *Server) devOAuthAuthorize(c *gin.Context) {
-	state := c.Request.URL.Query().Get("state")
-
-	u, err := url.Parse("http:://localhost/callback")
-	if err != nil {
-		c.JSON(http.StatusInternalServerError,
-			models.APIError{
-				Code:    http.StatusInternalServerError,
-				Message: "could not make url",
-			})
-	}
-
-	v := url.Values{}
-	v.Set("code", "code")
-	v.Set("state", state)
-	u.RawQuery = v.Encode()
-
-	http.Redirect(c.Writer, c.Request, u.String(), http.StatusTemporaryRedirect)
 }
